@@ -2,16 +2,13 @@ package com.kaitech.student_crm.models;
 
 
 import com.fasterxml.jackson.annotation.JsonFormat;
-import com.kaitech.student_crm.models.roles.ERole;
+import com.kaitech.student_crm.models.enums.ERole;
 import jakarta.persistence.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 @Entity
 @Table(name = "\"user\"")
@@ -20,9 +17,6 @@ public class User implements UserDetails {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
-
-    @Column
-    private String username;
 
     @Column(nullable = false)
     private String firstname;
@@ -33,20 +27,19 @@ public class User implements UserDetails {
     @Column(unique = true)
     private String email;
 
-    @Column(unique = true)
-    private String phoneNumber;
-
     @Column(length = 3000)
     private String password;
 
-    @ElementCollection(targetClass = ERole.class)
-    @CollectionTable(name = "user_role",
-            joinColumns = @JoinColumn(name = "user_id"))
-    private Set<ERole> roles = new HashSet<>();
+    @Enumerated(EnumType.STRING)
+    private ERole role;
 
     @JsonFormat(pattern = "yyyy-mm-dd HH:mm:ss")
     @Column(updatable = false)
     private LocalDateTime createdDate;
+
+    @OneToOne(mappedBy = "user")
+    private Student student;
+    private Integer code;
 
     @Transient
     private Collection<? extends GrantedAuthority> authorities;
@@ -54,15 +47,30 @@ public class User implements UserDetails {
     public User() {
     }
 
-    public User(Long id,
-                String username,
-                String email, String password,
-                Collection<? extends GrantedAuthority> authorities) {
-        this.id = id;
-        this.username = username;
+    public User(String email, String password, ERole role) {
         this.email = email;
         this.password = password;
-        this.authorities = authorities;
+        this.role = role;
+    }
+
+    public User(Long id,
+                String email, String password,
+                ERole role) {
+        this.id = id;
+        this.email = email;
+        this.password = password;
+        this.role = role;
+    }
+
+    public User(String firstname, String lastname,
+                String email, String password,
+                ERole role, LocalDateTime createdDate) {
+        this.firstname = firstname;
+        this.lastname = lastname;
+        this.email = email;
+        this.password = password;
+        this.role = role;
+        this.createdDate = createdDate;
     }
 
     @PrePersist
@@ -72,7 +80,7 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
+        return Collections.singletonList(this.role);
     }
 
     public Long getId() {
@@ -83,9 +91,6 @@ public class User implements UserDetails {
         this.id = id;
     }
 
-    public void setUsername(String username) {
-        this.username = username;
-    }
 
     public String getFirstname() {
         return firstname;
@@ -111,25 +116,10 @@ public class User implements UserDetails {
         this.email = email;
     }
 
-    public String getPhoneNumber() {
-        return phoneNumber;
-    }
-
-    public void setPhoneNumber(String phoneNumber) {
-        this.phoneNumber = phoneNumber;
-    }
-
     public void setPassword(String password) {
         this.password = password;
     }
 
-    public Set<ERole> getRoles() {
-        return roles;
-    }
-
-    public void setRoles(Set<ERole> roles) {
-        this.roles = roles;
-    }
 
     public LocalDateTime getCreatedDate() {
         return createdDate;
@@ -150,7 +140,7 @@ public class User implements UserDetails {
 
     @Override
     public String getUsername() {
-        return username;
+        return email;
     }
 
     @Override
@@ -171,5 +161,28 @@ public class User implements UserDetails {
     @Override
     public boolean isEnabled() {
         return true;
+    }
+
+    public ERole getRole() {
+        return role;
+    }
+
+    public void setRole(ERole role) {
+        this.role = role;
+    }
+
+    public Student getStudent() {
+        return student;
+    }
+
+    public void setStudent(Student student) {
+        this.student = student;
+    }
+    public Integer getCode() {
+        return code;
+    }
+
+    public void setCode(Integer code) {
+        this.code = code;
     }
 }
